<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_general"
    tools:context="com.gerus.bitware.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/name"
            android:inputType="textCapWords"
            android:layout_margin="@dimen/margin_textEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/firstName"
            android:inputType="textCapWords"
            android:layout_margin="@dimen/margin_textEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/firstName" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/lastName"
            android:inputType="textCapWords"
            android:layout_margin="@dimen/margin_textEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/secondName" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/age"
            android:inputType="number"
            android:layout_margin="@dimen/margin_textEdit"
            android:maxLength="@integer/numberlength"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/age" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/gender"
            android:inputType="textCapWords"
            android:layout_margin="@dimen/margin_textEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/gender" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/weight"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/margin_textEdit"
            android:layout_height="wrap_content"
            android:hint="@string/weight" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/height"
            android:layout_margin="@dimen/margin_textEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/height" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/submit"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"
            android:layout_margin="@dimen/margin_textEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit" />

    </LinearLayout>

</ScrollView>

