<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/padding_general"
    android:paddingBottom="@dimen/padding_general"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/request_post"
            style="@style/ButtonStyle"
            android:text="@string/request_post" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/request_get"
            style="@style/ButtonStyle"
            android:text="@string/request_get" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/request_put"
            style="@style/ButtonStyle"
            android:text="@string/request_put" />

    </LinearLayout>

</ScrollView>

